Update notebook output.

--- a/notebooks/notebook_here.ipynb
+++ b/notebooks/notebook_here.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "'/src'"
+       "'/src/notebooks'"
       ]
      },
      "execution_count": 1,
@@ -29,8 +29,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "docker-compose.yml          module_scripts_here.txt\r\n",
-      "jupyter_notebook_config.py  \u001b[0m\u001b[01;34mnotebooks\u001b[0m/\r\n"
+      "notebook_here.ipynb\r\n"
      ]
     }
    ],
